Refactor CommentService and API
