# server/apps/api/issues/views.py
@@ -150,10 +150,10 @@ class CommentDetailApi(APIView):
         author_id = serializers.IntegerField()
         created_at = serializers.DateTimeField(format='%Y-%m-%d %H:%M')
 
-    def get(self, request: Request, issue_id: int, comment_id: int) -> Response:   # noqa: D102
+    def get(self, request: Request, comment_id: int) -> Response:   # noqa: D102
         try:
-            comment = CommentService.get_or_error(issue_id=issue_id, comment_id=comment_id)
-        except (IssueService.IssueNotFoundError, CommentService.CommentNotFoundError) as exc:
+            comment = CommentService.get_or_error(comment_id=comment_id)
+        except CommentService.CommentNotFoundError as exc:
             raise NotFound() from exc
 
         data = self.OutputSerializer(comment).data
@@ -168,13 +168,13 @@ class CommentUpdateApi(APIView):
     class InputSerializer(serializers.Serializer):
         text = serializers.CharField()
 
-    def patch(self, request: Request, issue_id: int, comment_id: int) -> Response:   # noqa: D102
+    def patch(self, request: Request, comment_id: int) -> Response:   # noqa: D102
         serializer = self.InputSerializer(data=request.data)
         serializer.is_valid(raise_exception=True)
 
         try:
-            comment = CommentService.get_or_error(issue_id=issue_id, comment_id=comment_id)
-        except (CommentService.CommentNotFoundError, IssueService.IssueNotFoundError) as exc:
+            comment = CommentService.get_or_error(comment_id=comment_id)
+        except CommentService.CommentNotFoundError as exc:
             raise NotFound() from exc
 
         self.check_object_permissions(request, comment)
